; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/dev/ath/ath_hal/ar9300/extr_ar9300_attach.c_ar9300_init_offsets.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/dev/ath/ath_hal/ar9300/extr_ar9300_attach.c_ar9300_init_offsets.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath_hal = type { i32 }

@AR9300_DEVID_AR9340 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ath_hal*, i64)* @ar9300_init_offsets to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ar9300_init_offsets(%struct.ath_hal* %0, i64 %1) #0 {
  %3 = alloca %struct.ath_hal*, align 8
  %4 = alloca i64, align 8
  store %struct.ath_hal* %0, %struct.ath_hal** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @AR9300_DEVID_AR9340, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load %struct.ath_hal*, %struct.ath_hal** %3, align 8
  %10 = call i32 @ar9340_init_hostif_offsets(%struct.ath_hal* %9)
  br label %14

11:                                               ; preds = %2
  %12 = load %struct.ath_hal*, %struct.ath_hal** %3, align 8
  %13 = call i32 @ar9300_init_hostif_offsets(%struct.ath_hal* %12)
  br label %14

14:                                               ; preds = %11, %8
  ret i32 0
}

declare dso_local i32 @ar9340_init_hostif_offsets(%struct.ath_hal*) #1

declare dso_local i32 @ar9300_init_hostif_offsets(%struct.ath_hal*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
